fix(web): remove unused style

--- a/web/pages/_app.styles.css
+++ b/web/pages/_app.styles.css
@@ -1,9 +1,1 @@
-.UserContent a {
-    color: #319795;
-    border-bottom: 1px solid;
-    border-color: #90cdf4;
-}
-
-.UserContent li {
-    margin-left: 1em;
-}
+/*.UserContent {} */
